<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Burna\'s PetAid</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_dog_">MY DOG</string>
    <string name="title_activity_cat_">MY CAT</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_sql__helper">SQL_Helper</string>
    <string name="title_activity_dog_health">Dog Health</string>
    <string name="title_activity_puppy_care">Puppy Care</string>
    <string name="diet">A nutritious, balanced diet is essential
        to keeping your dog healthy. Learn what you should be feeding
        your dog at every stage of its life.</string>
    <string name="title_activity_diet_">Diet And Nutrients</string>
    <string name="title_activity_dog__preventive_">Preventive and Care</string>
    <string name="prevent">It\'s your job to keep your dog healthy and safe.
        Get the facts about grooming, vaccinations, parasite prevention,
        and first aid.</string>
    <string name="title_activity_dog_health_">Dog Health</string>
    <string name="arthritis">What to do about joint problems in dogs.</string>
    <string name="diabetis">Symptoms, causes, diagnosis, and treatment of diabetes in dogs.</string>
    <string name="diarrhea">What to do if your dog has diarrhea, and when to call the vet.</string>
    <string name="ear_infection">Could your dog have an ear infection? How to tell and what to do.</string>
    <string name="eye_discharges">What to do about unsightly eye discharge and tear stains.</string>
    <string name="hot_spot">What to do when scratching and chewing leads to inflamed, irritated skin.</string>
    <string name="lower_urinary">Symptoms, causes, and treatments for lower urinary tract problems in dogs.</string>
    <string name="obsessive_licking">Why dogs scratch and lick compulsively, and how to break the habit.</string>
    <string name="shedding">How to minimize shedding and keep your dog\'s coat healthy.</string>
    <string name="vomittig">What it can mean, and when to call the vet.</string>
    <string name="title_activity_health__condition_">Health Condition</string>
    <string name="title_activity_kitten_">Kitten Care</string>
    <string name="title_activity_cat_diet_">Diet And Nutrients</string>
    <string name="cat_diet_intro">A nutritious, balanced diet is essential to keeping your cat healthy.
        Learn what you should be feeding your cat at every stage of its life.</string>
    <string name="title_activity_cat_preventive_">Preventive and Care</string>
    <string name="cat_prevent">It\'s your job to keep your cat healthy and safe. Get the facts about grooming,
        vaccinations, parasite prevention, and safety.</string>
    <string name="title_activity_cat_prevent_detail">Preventive Detail</string>
    <string name="title_activity_cat__health_">Cat Health</string>
    <string name="title_activity_cat__health__detail">Health Detail</string>
    <string name="title_activity_dog_breed">Dog Breed</string>
    <string name="title_activity_breed_detail">Breed Detail</string>
    <string name="title_activity_cat_breed">Cat Breed</string>
    <string name="title_activity_splash">Splash</string>
    <string name="title_activity_intro">Intro</string>
    <string name="title_activity_dog__diagnose">Dog_Diagnose</string>
    <string name="title_activity_cat_diagnose">Cat_diagnose</string>
    <string name="title_activity_cat_diagnosis">Cat_diagnosis</string>
    <string name="title_activity_navigate">BURNA\'S PETAID</string>

</resources>
