<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.elvis.petapps.Dog_health_Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:background="@drawable/ic_launcher"
            android:layout_gravity="center"
            />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/button_arthritis">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="ARTHRITIS"
            android:background="#9DD7E5"
            android:layout_marginTop="5dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:text="@string/arthritis"
            />
    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/button_diabetis">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="DIABETIS"
                android:background="#9DD7E5"
                android:layout_marginTop="5dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:text="@string/diabetis"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/button_diarrhea">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="DIARRHEA"
                android:background="#9DD7E5"
                android:layout_marginTop="5dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:text="@string/diarrhea"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/button_ear_infection">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="EAR INFECTION"
                android:background="#9DD7E5"
                android:layout_marginTop="5dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:text="@string/ear_infection"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/button_eye_discharge">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="EYE DISCHARGE AND TEAR STAINS"
                android:background="#9DD7E5"
                android:layout_marginTop="5dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:text="@string/eye_discharges"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/button_hot_spot">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="HOT SPOTS"
                android:background="#9DD7E5"
                android:layout_marginTop="5dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:text="@string/hot_spot"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/button_lower_urinary">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="LOWER URINARY TRACT PROBLEMS"
                android:background="#9DD7E5"
                android:layout_marginTop="5dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:text="@string/lower_urinary"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/button_obsessive_lick">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="OBSESSIVE LICKING AND SCRATCHING"
                android:background="#9DD7E5"
                android:layout_marginTop="5dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:text="@string/obsessive_licking"
                />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/button_vomitting">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="VOMITTING"
                android:background="#9DD7E5"
                android:layout_marginTop="5dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:text="@string/vomittig"
                />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
